--- a/css/bb84Animation.css
+++ b/css/bb84Animation.css
@@ -12,10 +12,14 @@
 	height: 200px;
 }
 
-.photon, .decode, .kGenerated, .base {
+.photon, .bobPhoton, .evePhoton, .decode, .kGenerated, .base {
 	margin: 1px;
 	height: 25px;
 	width: 25px;
+}
+
+.empty {
+	background: red;
 }
 
 .vertical {
