Add the animation with Eve and get the bit sequence from the result

--- a/css/bb84Animation.css
+++ b/css/bb84Animation.css
@@ -31,6 +31,9 @@
 }
 
 .bad {
-    filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(25deg) brightness(118%) contrast(119%);
+    filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(150deg) brightness(118%) contrast(119%);
 }
 
+.error {
+    filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(330deg) brightness(118%) contrast(119%);
+}
