--- a/css/bb84.css
+++ b/css/bb84.css
@@ -8,7 +8,7 @@
   body {
     background: #FFF;
     font-family: Lato, Helvetica, Arial, sans-serif;
-    margin-bottom: -700px;
+    margin-bottom: 2%;
   }
   
   a {
@@ -155,14 +155,67 @@
   }
 
    
-
-
- 
- 
  
  .base, .encodage {
 	margin: 1px;
-	height: 25px;
-	width: 25px;
+	height: 15px;
+	width: 15px;
 }
+
+h1 {
+  margin-top: 7%;
+  margin-right: auto;
+  margin-left: auto;
+  width: 17%;
+  margin-bottom: 2%;
+  
+}
+
+h2 {
+  margin-top: 2%;
+  margin-right: auto;
+  margin-left: auto;
+  width: 50%;
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+h3 {
+  margin-top: 2%;
+  margin-right: auto;
+  margin-left: 10%;
+  width: 70%;
+
+  margin-bottom: 2%;
+}
+
+p {
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+}
+
+ .pola {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+
+  .pola2 {
+    display: block;
+    margin-right: auto;
+    margin-left: 28%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+
+  ul { 
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+
+
 
